--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,9 @@
 Package: lmww
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Linear Model with Factor Weights
+Version: 0.0.1
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+    person("Dom", "Z", , "septemberwhyms@gmail.com", role = c("aut", "cre"))
+Description: Build linear models in terms of factor weights.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
